--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "fix": "ultracite fix"
   },
   "dependencies": {
+    "elysia": "^1.4.24",
     "next": "16.1.6",
     "react": "19.2.3",
     "react-dom": "19.2.3"
